--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.futres_">
-
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,12 +10,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
         <activity android:name=".Classificacao"></activity>
-        <activity android:name=".Login" />
+        <activity android:name=".MainActivity" />
         <activity android:name=".Rodada"
             android:label="FutRes" />
         <activity
-            android:name=".MainActivity"
+            android:name=".Login"
             android:label="FutRes">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
